# cmd/handlers/user.handler.go
@@ -15,11 +15,11 @@ const defaultCookieName = "Authorization"
 type UserHandler interface {
 	Create(c *gin.Context)
 	Login(c *gin.Context)
+	Get(c *gin.Context)
 	GetById(c *gin.Context)
+	Edit(c *gin.Context)
+	Delete(c *gin.Context)
 	Logout(c *gin.Context)
-	// ResetPassword(c *gin.Context)
-	// ValidateToken(c *gin.Context)
-	// ChangePassword(c *gin.Context)
 }
 
 type userHandler struct {
@@ -95,6 +95,27 @@ func (u *userHandler) Login(c *gin.Context) {
 // @Failure	400  {object}  response.ErrorMessage
 // @Failure	404  {object}  response.ErrorMessage
 // @Failure	500  {object}  response.ErrorMessage
+// @Router	/users/profile [get]
+func (u *userHandler) Get(c *gin.Context) {
+	user, err := u.userSrv.GetById(c.GetString("userId"))
+	if err != nil {
+		response.Error(c, *err)
+		return
+	}
+
+	response.Success(c, "User gotten successfully", user, 1)
+}
+
+// Get User godoc
+// @Summary	Get user by id route
+// @Description	Get user by id
+// @Tags	User
+// @Produce	json
+// @Param	userId	path	string	true	"User id"
+// @Success	200  {object}  response.SuccessMessage{data=models.User}
+// @Failure	400  {object}  response.ErrorMessage
+// @Failure	404  {object}  response.ErrorMessage
+// @Failure	500  {object}  response.ErrorMessage
 // @Router	/users/:userId [get]
 func (u *userHandler) GetById(c *gin.Context) {
 	user, err := u.userSrv.GetById(c.Param("userId"))
@@ -104,6 +125,60 @@ func (u *userHandler) GetById(c *gin.Context) {
 	}
 
 	response.Success(c, "User gotten successfully", user, 1)
+}
+
+// Edit User godoc
+// @Summary	Edit user route
+// @Description	Edit user
+// @Tags	User
+// @Produce	json
+// @Success	200  {object}	response.SuccessMessage{data=models.User}
+// @Failure	400  {object}  response.ErrorMessage
+// @Failure	404  {object}  response.ErrorMessage
+// @Failure	500  {object}  response.ErrorMessage
+// @Router	/users/profile [patch]
+// @Security ApiKeyAuth
+func (u *userHandler) Edit(c *gin.Context) {
+	var req forms.EditUser
+
+	if err := c.ShouldBindJSON(&req); err != nil {
+		response.Error(c, *se.Validating(err))
+		return
+	}
+
+	userId := c.GetString("userId")
+
+	user, err := u.userSrv.Edit(&req, userId)
+	if err != nil {
+		response.Error(c, *err)
+		return
+	}
+
+	response.Success(c, "User editted successfully", user)
+}
+
+// Delete User godoc
+// @Summary	Delete user route
+// @Description	Delete user
+// @Tags	User
+// @Produce	json
+// @Success	200  {string}	string	"User deleted successfully"
+// @Failure	400  {object}  response.ErrorMessage
+// @Failure	404  {object}  response.ErrorMessage
+// @Failure	500  {object}  response.ErrorMessage
+// @Router	/users/profile [delete]
+// @Security ApiKeyAuth
+func (u *userHandler) Delete(c *gin.Context) {
+	userId := c.GetString("userId")
+
+	err := u.userSrv.Delete(userId)
+	if err != nil {
+		response.Error(c, *err)
+		return
+	}
+
+	setCookie(c, "", -1)
+	response.Success202(c, "User deleted successfully")
 }
 
 // Logout User godoc
