# cmd/routes/user.route.go
@@ -21,6 +21,9 @@ func UserRoute(router *gin.RouterGroup, userSrv service.UserService, authSrv ser
 	jwt := middleware.Authentication(authSrv)
 	user1.Use(jwt.CheckJWT())
 	{
+		user1.GET("/profile", handler.Get)
+		user1.PATCH("/profile", handler.Edit)
+		user1.DELETE("/profile", handler.Delete)
 		user1.POST("/logout", handler.Logout)
 	}
 }
